# Storehouse_project

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logging.conf  logging_conf.py  prod.env  pyproject.toml
app/: main.py
app/api/v1/dependancies/: authorization.py
app/api/v1/models/: __init__.py  category.py  common.py  country.py  product.py  user.py
app/api/v1/repositories/: category.py  common.py  country.py  favourite.py  product.py  user.py  user2.py
app/api/v1/routers/: __init__.py
app/api/v1/serializers/: category.py  country.py  product.py  user.py
app/api/v1/views/: __init__.py  category.py  countries.py  favourite.py  health_check.py  product.py  user.py  user2.py
app/brokers/: base.py  configurations.py
core/: config.py  events.py
core/constants/: request.py  response_messages.py  service.py  strings.py  transaction.py
core/database/migrations/: env.py
core/database/migrations/versions/: d2612d7b76cc_add_all_tablea.py
core/database/settings/: events.py  session_maker.py
core/exceptions/: database.py  error_messages.py  service.py
core/middlewares/: __init__.py  catch_exception.py  logger.py
core/mongo/: __init__.py  client.py  events.py  exceptions.py  mongo_db.py  query.py
core/serializers/: response.py
core/settings/: app.py  base.py  cloudinary.py  development.py  secret_manager.py  test.py
integrations/aws_queue/: aws_sns.py  base_sqs_listener.py  pusher.py  sqs_consumer.py
utils/: cognito_helper.py  generate_random_code.py  http_response.py  time.py  upload_manager.py
